Entrypoint and Basic Setup (#4)
1. This creates an entry-point and basic setup to get the project
rolling.
2. There is dummy functionality in scan command. 
3. We use `platformdirs` to get OS specific directories for storing
configuration and app-generated data.
4. Add tests. The goal is to 100% coverage in this repo.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,15 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
+dependencies = [
+    "rich>=14.0.0",
+    "typer>=0.16.0",
+    "platformdirs>=4.2.0",
+]
+
+[project.scripts]
+file-whisperer = "file_whisperer.cli:app"
+whisperer = "file_whisperer.cli:app"
 
 [project.urls]
 Homepage = "https://zeeshansayyed.github.io/file-whisperer/"
@@ -102,7 +111,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["S101"]
+"tests/*" = ["S101", "S603", "S607"]
 
 [tool.ruff.format]
 preview = true
@@ -113,3 +122,6 @@ skip_empty = true
 [tool.coverage.run]
 branch = true
 source = ["src"]
+
+[tool.deptry]
+known_first_party = ["file_whisperer"]
